--- a/index.html
+++ b/index.html
@@ -153,15 +153,97 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="masonry-portfolio-2.jpg" class="img-fluid" alt="">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocG">
+              <img src="GL - Angular.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Product 1</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="masonry-portfolio-2.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <h4>Great Learning</h4>
+                <p>Introduction to Angular JS</p>
+                <a href="GL - Angular.png" title="MOOC" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocG">
+              <img src="GL - Cloud.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Great Learning</h4>
+                <p>Cloud Foundation</p>
+                <a href="GL - Cloud.png" title="MOOC" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocG">
+              <img src="GL - Data preprocessing.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Great Learning</h4>
+                <p>Data preprocessing</p>
+                <a href="GL - Data preprocessing.png" title="MOOC" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocG">
+              <img src="GL - Data Science.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Great Learning</h4>
+                <p>Statistics for Data Science</p>
+                <a href="GL - Data Science.png" title="MOOC" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocG">
+              <img src="GL - Ethical Hacker.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Great Learning</h4>
+                <p>Ethical Hacker</p>
+                <a href="GL - Ethical Hacker.png" title="MOOC" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocG">
+              <img src="GL - HTML.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Great Learning</h4>
+                <p>HTML Attributes and Tags</p>
+                <a href="GL - HTML.png" title="MOOC" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocG">
+              <img src="GL - Javascript.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Great Learning</h4>
+                <p>Gaming in JavaScript</p>
+                <a href="GL - Javascript.png" title="MOOC" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocG">
+              <img src="GL - Oops.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Great Learning</h4>
+                <p>OOPs in Java</p>
+                <a href="GL - Oops.png" title="MOOC" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocG">
+              <img src="GL - Sorting algo.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Great Learning</h4>
+                <p>Sorting algorithm in C</p>
+                <a href="GL - Oops.png" title="MOOC" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="masonry-portfolio-3.jpg" class="img-fluid" alt="">
