--- a/index.html
+++ b/index.html
@@ -256,11 +256,11 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-lor">
-              <img src="LOR -python.png" class="img-fluid" alt="">
+              <img src="LoR -python.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Letter of Recommendation</h4>
                 <p>Python Programming Course</p>
-                <a href="LOR -python.png" title="myCaptain" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="LoR -python.png" title="myCaptain" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
