--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <div class="portfolio-info">
                 <h4>Internship</h4>
                 <p>Async Health</p>
-                <a href="Async Health.png" title="Internship" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="ri-zoom-in-line"></i></a>
+                <a href="Async Health.png" title="Internship" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="fa-solid fa-magnifying-glass"></i></a>
                 
               </div>
             </div><!-- End Portfolio Item -->
