--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
             <h2>Achievements<span>.</span></h2>
-            <p>Certificates and ecpleriences I aquired</p>
+            <p>Certificates and experiences I aquired</p>
           </div>
         </div>
 
