--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             <li data-filter=".filter-moocS">Springboard Infosys</li>
             <li data-filter=".filter-moocG">Great Learning</li>
             <li data-filter=".filter-moocO">Open Weaver</li>
+            <li data-filter=".filter-others">Others</li>
             
             
           </ul><!-- End Portfolio Filters -->
@@ -154,7 +155,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocS">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-others">
               <img src="Interpersonal Skills.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Springboard Infosys</h4>
@@ -184,7 +185,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocS">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-others">
               <img src="Leading for success.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Springboard Infosys</h4>
@@ -254,7 +255,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocS">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-others">
               <img src="Management Process.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Springboard Infosys</h4>
@@ -264,7 +265,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocS">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-others">
               <img src="Public speaking.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Springboard Infosys</h4>
@@ -284,7 +285,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocS">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-others">
               <img src="Personality Development I.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Springboard Infosys</h4>
@@ -294,7 +295,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-moocS">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-others">
               <img src="Personality Development II.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Springboard Infosys</h4>
