--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Certificates</h2>
-        <p>Check our Certificates</p>
+        <p>Check my Certificates</p>
       </div><!-- End Section Title -->
 
       <div class="container">
