--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Certificates</h2>
+        <h2>Certifications</h2>
         <p>Check my Certificates</p>
       </div><!-- End Section Title -->
 
@@ -115,6 +115,7 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-internship">Internship</li>
             <li data-filter=".filter-lor">LoR</li>
+            <li data-filter=".filter-eduTS">Edufyi Tech</li>
             <li data-filter=".filter-moocS">Springboard Infosys</li>
             <li data-filter=".filter-moocG">Great Learning</li>
             <li data-filter=".filter-moocO">Open Weaver</li>
@@ -151,6 +152,16 @@
                 <h4>Great Learning</h4>
                 <p>Introduction to Angular JS</p>
                 <a href="GL - Angular.png" title="MOOC" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="fas fa-search-plus"></i></a>
+                
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-eduTS">
+              <img src="GL - Angular.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Edufyi Tech</h4>
+                <p>Introduction to Machine Learning</p>
+                <a href="Edu course comp.png" title="Edufyi Course" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="fas fa-search-plus"></i></a>
                 
               </div>
             </div><!-- End Portfolio Item -->
