--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-eduTS">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-eduTS filter-lor">
               <img src="LOR edu.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Letter of Recommendation</h4>
@@ -380,7 +380,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-internship">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-internship filter filter-eduTS">
               <img src="Edu Internship comp.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Internship</h4>
